<resources>
    <string-array name="tts_voice_names">
        <item>"Jola online"</item>
        <item>"Jola lokalnie"</item>
        <item>"Celina"</item>
        <item>"Anżela"</item>
        <item>"Asia"</item>
        <item>"Sebastian"</item>
        <item>"Bartek"</item>
        <item>"Andrzej"</item>
    </string-array>
    <string-array name="tts_voice_values">
        <item>"pl-pl-x-oda-network"</item>
        <item>"pl-pl-x-oda-local"</item>
        <item>"pl-pl-x-oda#female_1-local"</item>
        <item>"pl-pl-x-oda#female_2-local"</item>
        <item>"pl-pl-x-oda#female_3-local"</item>
        <item>"pl-pl-x-oda#male_1-local"</item>
        <item>"pl-pl-x-oda#male_2-local"</item>
        <item>"pl-pl-x-oda#male_3-local"</item>
    </string-array>
    <string-array name="remotecontroller_modes_names">
        <item>"Control by remote without a monitor"</item>
        <item>"Control by gesture"</item>
        <item>"Control with monitor"</item>
    </string-array>
    <string-array name="remotecontroller_modes_values">
        <item>OFF_DISPLAY</item>
        <item>BY_GESTURE</item>
        <item>ON_DISPLAY</item>
    </string-array>
    <string name="app_name">AIS dom Wear</string>
    <string name="app_add_gate_connection_info">To use the app, add the connection to AIS dom gate.</string>
    <string name="app_get_gate_for_pin_error">Unable to retrieve gateway ID with PIN.</string>
    <string name="app_i_am_listening_info">Listening...</string>
    <string name="aispanel_service_notification_title">AIS dom</string>
    <string name="aispanel_service_notification_message">runing</string>
    <string name="share_file_chooser_title">Share with</string>
    <string name="grant_permission">Grant permission</string>
    <string name="title_activity_settings">APPLICATION SETTINGS</string>
    <string name="title_activity_other_apps">INTEGRATIONS</string>
    <string name="title_activity_browser">AIS dom</string>
    <string name="key_setting_app_discovery">setting_app_discovery</string>
    <string name="default_setting_app_discovery">false</string>
    <string name="title_setting_app_discovery">Player discovery</string>
    <string name="summary_setting_app_discovery">allow the device to be discovered as a player in the network</string>
    <string name="default_setting_app_beep_on_click">true</string>
    <string name="summary_setting_app_beep_on_click">Play a beep sound on remote button click</string>
    <string name="title_ais_dom_wizard_section">SETTINGS WIZARD</string>
    <string name="title_experimental_settings">EXPERIMENTAL</string>
    <string name="title_ais_dom_connection">CONNECTION TO GATEWAY</string>
    <string name="title_ais_dom_connections_history">CONNECTIONS HISTORY</string>
    <string name="key_setting_app_launchurl">setting_app_launchurl</string>
    <string name="default_setting_app_launchurl"></string>
    <string name="title_setting_app_launchurl">Pairing PIN*</string>
    <string name="title_setting_app_launchurl_summary">*PIN from AIS dom gate</string>
    <string name="title_setting_run_wizard_title">Run configuration wizard.</string>
    <string name="title_setting_run_wizard_summary">You can ran configuration wizard to easy set all settings.</string>
    <string name="title_recent_connections">Recent connections list</string>
    <string name="summary_recent_connections">you can pick position from list to reconnect</string>
    <string name="key_setting_app_remotecontrollermode">setting_app_remotemode</string>
    <string name="title_setting_app_remotecontrollermode">Control operation mode</string>
    <string name="summary_setting_app_remotecontrollermode">choose a control mode</string>
    <string name="default_setting_app_remotecontrollermode">ON_DISPLAY</string>
    <string name="key_setting_app_tts_voice">setting_app_tts_voice</string>
    <string name="title_setting_app_tts_voice">TTS Voice</string>
    <string name="summary_setting_app_tts_voice">choose a voice</string>
    <string name="default_setting_app_tts_voice">pl-pl-x-oda-local</string>
    <string name="key_setting_android_browsertype">setting_android_browsertype</string>
    <string name="title_setting_android_browsertype">Browser engine</string>
    <string name="default_setting_android_browsertype">Native</string>
    <string name="key_setting_test_zoomlevel">setting_test_zoomlevel</string>
    <string name="title_setting_test_zoomlevel">Zoom in app</string>
    <string name="summary_setting_test_zoomlevel">choose the magnification scale of the application panel</string>
    <string name="default_setting_test_zoomlevel">1.0</string>
    <string name="key_setting_android_ext_storage_write">setting_android_ext_storage_write</string>
    <string name="title_setting_android_ext_storage_write">Server FTP (port 1024)</string>
    <string name="default_setting_android_ext_storage_write">false</string>
    <string name="crash_toast_text">Upss, we have a problem! We collect information to fix this problem.</string>
    <string name="crash_dialog_title">The AIS-dom application has stopped working</string>
    <string name="crash_dialog_text">An unexpected force error occurred
        stopping the application. Help us fix it by sending us data about the problem,
        all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">Please add your comment below:</string>
    <string name="crash_dialog_ok_toast">Thanks, we will take care of this issue!</string>
    <string name="cammera_button_ok">OK</string>
    <string name="cammera_button_cancel">Cancel</string>
    <string name="cammera_permissions_dialog_info">You need to allow access permissions</string>
    <string name="cammera_permissions_denied_title">Permission Denied</string>
    <string name="cammera_wrong_code_dialog_info">This gate code %1$s is wrong.\n\n Can you try again?</string>
    <string name="action_settings">Settings</string>
    <string name="speech_not_supported">Sorry! It looks like the device does not support voice commands.</string>
    <string name="application_name">AIS-dom</string>
    <string name="shared_user_label">Użytkownik</string>
    <string name="new_session">New sesion</string>
    <string name="new_session_failsafe">Failsafe</string>
    <string name="toggle_soft_keyboard">Keyboard</string>
    <string name="reset_terminal">Reset</string>
    <string name="style_terminal">Style</string>
    <string name="share_transcript_title">Terminal transcript</string>
    <string name="help">Help</string>
    <string name="bootstrap_installer_body">Installing the system packages…</string>
    <string name="bootstrap_error_title">Error during the installation</string>
    <string name="bootstrap_error_body">We ca not install the bootstrap packages.\n\nPlease check your internet connection.</string>
    <string name="bootstrap_error_abort">Cancel</string>
    <string name="bootstrap_error_try_again">Retry</string>
    <string name="bootstrap_error_not_primary_user_message">AIS-dom can be installed only on main account.</string>
    <string name="max_terminals_reached_title">Max terminals reached</string>
    <string name="max_terminals_reached_message">Please close the current session before open new one.</string>
    <string name="reset_toast_notification">Terminal reset.</string>
    <string name="select_url">Select the URL</string>
    <string name="select_url_dialog_title">Click the URL to copy or long click to go</string>
    <string name="select_all_and_share">Share transcripts</string>
    <string name="select_url_no_found">URLs not found in the terminal.</string>
    <string name="select_url_copied_to_clipboard">URL copied to the clipboard</string>
    <string name="share_transcript_chooser_title">Send text to:</string>
    <string name="session_rename_title">Set the name of the session</string>
    <string name="session_rename_positive_button">Set</string>
    <string name="session_new_named_title">New named session</string>
    <string name="session_new_named_positive_button">Create</string>
    <string name="styling_install">Install</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Block sleep</string>
    <string name="notification_action_wake_unlock">Release the sleep lock</string>
    <string name="notification_action_gotoconsole">Terminal</string>
    <string name="notification_action_gotosettings">Settings</string>
    <string name="file_received_title">Save file in ~/downloads/</string>
    <string name="file_received_edit_button">Edit</string>
    <string name="file_received_open_folder_button">Open folder</string>
    <string name="menu_application_panel">Application panel >></string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_new_name">Enter new name:</string>
    <string name="save_gesture">Save Gesture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_name">Enter valid name</string>
    <string name="gesture_saved"> saved successfully to : </string>
    <string name="no_gesture">Please draw gesture first!</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="add_gesture_button">Add</string>
    <string name="test_gesture_button">Test</string>
    <string name="cannot_load_library">cannot load gesture library</string>
    <string name="test_gesture_activity_label">Test Gesture</string>
    <string name="draw_a_gesture">Draw a gesture, I will try to recognize!</string>
    <string name="list_gesture">Gestures list</string>
    <string name="summary_list_gesture">you can define the gestures and commands behind these gestures</string>
    <string name="pref_ais_dom_console_title">Console</string>
    <string name="pref_ais_dom_console_summary">advanced features are available from console</string>
    <string name="pref_ais_dom_spotify_summary">go to Spotify</string>
    <string name="pref_ais_dom_exit_summary">click to exit the app</string>
    <string name="pref_ais_about_app">APP VERSION</string>
    <string name="pref_ais_dom_reset_title">Full App Reset</string>
    <string name="pref_ais_dom_reset_summary">Clears all current files and application settings. Then it installs the latest default files and settings.</string>
    <string name="pref_ais_dom_reset_confirm">I know what I am doing. Perform full app reset.</string>
    <string name="pref_ais_dom_reset_confirm_info_title">Attention</string>
    <string name="pref_ais_dom_reset_confirm_info_message">All your custom settings and configurations will be removed! Downloading the latest version of the default codes and settings may take several dozen minutes. Are you sure you want to continue?</string>
    <string name="pref_ais_dom_reset_download_info">Downloading default codes and settings for the "Asystent domowy" app. Hold on!</string>
    <string name="pref_ais_dom_reset_download_error">Download error: </string>
    <string name="pref_ais_dom_reset_download_ok">The default codes downloaded, we clean and run applications again.</string>
    <string name="pref_ais_dom_reset_download_server_answer">Server returned HTTP: </string>
    <string name="pref_ais_dom_reset_delete_info">Cleaning up the current app status.\n The device will be restarted in a moment.</string>
    <string name="back_to_exit">Please click BACK again to exit</string>
    <string name="webview_loading">Loading</string>
    <string name="list_connection_history">Connections history with gates</string>
    <string name="list_connection_history_click_to_delete">Click to delete</string>
    <string name="accessibility_service_label">Keyboard access for AIS dom</string>
    <string name="todo">TODO</string>
    <string name="permission_description">AIS dom API needs the permission to GPS</string>
</resources>